# SimProp-Sirente

./: .codedocs  .gitignore  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README.md  authors.csv
.github/workflows/: ci.yml
apps/: evolutor.cpp  printAnalyticalSolution.cpp  printCosmology.cpp  printCrossSections.cpp  printInitialState.cpp  printLosses.cpp  printMoneyPlot.cpp  printPhotonFields.cpp  printPropaganda.cpp  printRates.cpp  printSecondaryNeutrinos.cpp  printSecondarySpectrum.cpp  single.cpp  singleProton.cpp  singleProtonEvolutor.cpp
data/: EBL_Dominguez2011.txt  EBL_Igamma_Dominguez2011.txt  EBL_Saldana2021.txt  EBL_lower_Dominguez2011.txt  EBL_lower_Saldana2021.txt  EBL_upper_Dominguez2011.txt  EBL_upper_Saldana2021.txt  README.md  ebl_Dominguez2011_fiducial.txt  ebl_Dominguez2011_lower.txt  ebl_Dominguez2011_upper.txt  ebl_Gilmore2012_fiducial.txt  ebl_Saldana2021_fiducial.txt  ebl_Saldana2021_lower.txt  ebl_Saldana2021_upper.txt  losses_pair+pion_BGG2002.txt  losses_pair_BGG2002.txt  sigma_photopion_SOFIA.txt  sigma_photopion_highs.txt  xsec_params_pd_PSB.txt  xsec_ppp.txt  xsecs_KA2018_antiNuElectron.txt  xsecs_KA2018_antiNuMu.txt  xsecs_KA2018_nuElectron.txt  xsecs_KA2018_nuMu.txt  xsecs_photodisintegration_v2r4_alpha.txt  xsecs_photodisintegration_v2r4_singlenucleon.txt  xsecs_photopion_neutron_sophia.txt  xsecs_photopion_proton_sophia.txt
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml
examples/: analyticalSolution.cpp  evolveContinuousLosses.cpp  evolveProtons.cpp  printContinuousLosses.cpp  printCosmology.cpp  printCrossSections.cpp  printInitialState.cpp  printLosses.cpp  printOpticalDepth.cpp  printPhotonFields.cpp  printPhotopionRates.cpp  printRates.cpp
include/: simprop.h
include/simprop/: Units.h  common.h  cosmology.h  git_revision.h  logging.h  params.h  particle.h  particleStack.h  pid.h  random.h  simprop.h  strongtypes.h  timer.h  timing.h  units.h  utils.h
include/simprop/analyticalSolutions/: BzNeutrinos.h  beniamino.h  cosmoNus.h
include/simprop/core/: common.h  cosmology.h  opticalDepth.h  params.h  particle.h  pid.h  units.h
include/simprop/cosmology/: Planck2018.h  cosmology.h
include/simprop/crossSections/: BreitWheeler.h  CrossSection.h  KelnerAharonian2008.h  PhotoDisintegrationTalysXsecs.h  PhotoPionProduction.h  PhotoPionProductionXsec.h  PhotoPionXsecs.h
include/simprop/energyLosses/: AbstractContinuousLosses.h  AdiabaticContinuousLosses.h  BGG2002ContinuousLosses.h  BGG2006ContinuousLosses.h  ContinuousLosses.h  PairProductionLosses.h  PhotoPionContinuousLosses.h  continuousLosses.h
include/simprop/evolutors/: SingleProtonEvolutor.h
include/simprop/interactions/: AbstractInteraction.h  AbstractPhotoDisintegration.h  Interaction.h  PhotoDisintegration.h  PhotoPionProduction.h  PhotoPionProductionSophia.h  PsbPhotoDisintegration.h  photopion.h  pppCmb.h  pppEbl.h
include/simprop/output/: outputManager.h
include/simprop/particleStacks/: Builder.h  MonochromaticBuilder.h  SingleParticleBuilder.h  SingleSourceBuilder.h  SourceEvolutionBuilder.h
include/simprop/photonFields/: AbstractPhotonField.h  CMB.h  CmbPhotonField.h  Dominguez2011PhotonField.h  Gilmore2012PhotonField.h  LookupTablePhotonField.h  Nitu2021RadioPhotonField.h  PhotonField.h  Saldana2021PhotonField.h  TabularPhotonField.h  photonField.h
include/simprop/units/: UnitsBasic.h  UnitsDerived.h  UnitsFunctions.h  UnitsLiterals.h  UnitsQClass.h  UnitsSIPrefixes.h  UnitsSimProp.h  UnitsSimple.h
include/simprop/utils/: git_revision.h  gsl.h  interpolators.h  io.h  logging.h  lookupContainers.h  lookupTable.h  misc.h  numeric.h  progressbar.h  random.h  spline.h  timer.h  tqdm.h
src/: common.cpp  cosmology.cpp  logging.cpp  main.cpp  params.cpp  particleStack.cpp  pid.cpp  simprop.cpp  timer.cpp  utils.cpp
src/analyticalSolutions/: BzNeutrinos.cpp  beniamino.cpp  cosmoNus.cpp  neutrinos.cpp
src/core/: common.cpp  cosmology.cpp  opticalDepth.cpp  params.cpp  pid.cpp
src/cosmology/: cosmology.cpp
src/crossSections/: BreitWheeler.cpp  KelnerAharonian2008.cpp  PhotoDisintegrationTalysXsecs.cpp  PhotoPionProduction.cpp  PhotoPionProductionXsec.cpp  PhotoPionXsecs.cpp
src/energyLosses/: AdiabaticContinuousLosses.cpp  BGG2002ContinuousLosses.cpp  BGG2006ContinuousLosses.cpp  PairProductionLosses.cpp  PhotoPionContinuousLosses.cpp  continuousLosses.cpp
src/evolutors/: SingleProtonEvolutor.cpp
src/interactions/: PhotoDisintegration.cpp  PhotoPionProduction.cpp  PhotoPionProductionSophia.cpp  PsbPhotoDisintegration.cpp  muonDecay.cpp  pppCmb.cpp  pppEbl.cpp
src/particleStacks/: Builder.cpp  MonochromaticBuilder.cpp  SingleParticleBuilder.cpp  SingleSourceBuilder.cpp  SourceEvolutionBuilder.cpp
src/photonFields/: CMB.cpp  CmbPhotonField.cpp  Dominguez2011PhotonField.cpp  Gilmore2012PhotonField.cpp  LookupTablePhotonField.cpp  Nitu2021RadioPhotonField.cpp  PhotonField.cpp
src/utils/: git_revision.cpp.in  interpolators.cpp  io.cpp  logging.cpp  misc.cpp  numeric.cpp  progressbar.cpp  timer.cpp
test/: testCommon.cpp  testCosmology.cpp  testPID.cpp  testPhotonFields.cpp  testPid.cpp  testRng.cpp
tests/: printEbl.cpp  printLosses.cpp  printRates.cpp  printSigmas.cpp
